# squiggle

./: .gitignore  README.md  TODO.md  notes.md
bots/github_repo_stargazers/: stargazers.toml
bots/github_repo_stargazers/src/: index.d.ts  index.ts  library.ts
bundler/: Cargo.toml
bundler/src/: main.rs
node/: .gitignore  Cargo.toml  blob.json
node/src/: accounts.rs  gateway.rs  iroh.rs  lib.rs  main.rs  node.rs  repo.rs  router.rs  space.rs  vm.rs
node/src/gateway/: server.rs
node/src/repo/: db.rs  events.rs  programs.rs  rows.rs  schemas.rs  users.rs
node/src/repo/std_schemas/: programs.json
node/src/space/: capabilities.rs  db.rs  events.rs  programs.rs  rows.rs  schemas.rs  secrets.rs  sharing.rs  space_events.rs  sync.rs  tables.rs  tickets.rs  users.rs
node/src/vm/: api.rs  blobs.rs  config.rs  content_routing.rs  doc.rs  flow.rs  job.rs  metrics.rs  node.rs  scheduler.rs  test_utils.rs  worker.rs  workspace.rs
node/src/vm/worker/: executor.rs
node/src/vm/worker/executor/: docker.rs  wasm.rs
node/src/worker/: api.rs  blobs.rs  config.rs  content_routing.rs  doc.rs  docker.rs  flow.rs  job.rs  lib.rs  metrics.rs  node.rs  scheduler.rs  test_utils.rs  worker.rs  workspace.rs
node/src/worker/worker/: executor.rs
node/src/worker/worker/executor/: docker.rs  shell.rs  wasm.rs
node/test/: db.sqlite  default-author  docs.redb  keypair
node/test/blobs/: blobs.db
node/tests/: default-author  docs.redb  keypair  min.wat  wasm.toml
node/tests/blobs/: blobs.db
node/tests/console/: history
programs/data_explorer/: components.json  package-lock.json  tailwind.config.ts  vite.config.ts
programs/data_explorer/src/: api.ts
programs/data_explorer/src/app/: App.tsx  bots.tsx  data.tsx  router.tsx  table.tsx  tables.tsx
programs/data_explorer/src/components/: app-sidebar.tsx  data-table-column-header.tsx  data-table-pagination.tsx  data-table-toolbar.tsx
programs/data_explorer/src/components/ui/: loading.tsx
programs/explorer/: package.json  vite.config.ts
programs/explorer/src/: api.ts  types.ts
programs/explorer/src/app/: home.tsx  people.tsx  programs.tsx  router.tsx  tables.tsx
programs/explorer/src/components/: app-sidebar.tsx
programs/explorer/src/components/ui/: command.tsx
programs/github_repo_stargazers/: package.json  program.json  stargazers.toml
programs/github_repo_stargazers/src/: index.d.ts  index.ts  library.ts
ui/: chrome.html  cozy.html  package-lock.json  package.json  sidebar.html  tsconfig.json
ui/src/: App.tsx  api.ts  main.tsx  types.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/pageload/: package-lock.json  package.json
ui/src-tauri/pageload/src/: main.ts
ui/src-tauri/src/: app_state.rs  lib.rs  main.rs
ui/src/app/: App.tsx  Layout.tsx  People.tsx  drive.tsx  home.tsx  projects.tsx  router.tsx  table.tsx  webpage.tsx
ui/src/app/space/: layout.tsx  people.tsx  program.tsx  programs.tsx  table.tsx  tables.tsx
ui/src/components/: app-sidebar.tsx  command-dialog-menu.tsx  data-table-column-header.tsx  data-table-row-actions.tsx  data-table-view-options.tsx  data-table.tsx  frame.tsx  program-details.tsx  require-space.tsx  secrets-dialog.tsx  space-sidebar.tsx
ui/src/components/ui/: command.tsx
ui/src/data/: model.tsx
ui/src_old/: api.ts  main.tsx
ui/src_old/components/: command-dialog-menu.tsx
ui/src_old/components/ui/: command.tsx
ui/test/: db.sqlite  default-author  docs.redb  keypair  peers.postcard  workspaces.json
ui/test/blobs/: blobs.db
