[package]
name = "datalayer_node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
async-broadcast = "0.7.1"
axum = "0.7.7"
bollard = "0.17.1"
bytes = "1.8.0"
chrono = "0.4.38"
config = "0.14.1"
derive_more = { version = "1.0.0", features = ["display", "from_str", "debug"] }
dirs = "5.0.1"
dirs-next = "2.0.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
extism = "1.8.0"
futures = "0.3.31"
futures-buffered = "0.2.9"
hex = { version = "0.4.3", features = ["serde"] }
iroh = "0.27.0"
iroh-metrics = "0.27.0"
rand = "0.8.5"
rusqlite = { version = "0.32.1", features = ["uuid"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
tempfile = "3.13.0"
time = { version = "0.3.34", features = ["serde-human-readable"] }
tinytemplate = "1.2.1"
tokio = { version = "1.41.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
version-compare = "0.2.0"
walkdir = "2.5.0"
wasi-common = "19.0.1"
wasmtime = "19.0.1"
wasmtime-wasi = "19.0.1"

