[package]
name = "datalayer_node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
async-broadcast = "0.7.1"
async-channel = "2.3.1"
axum = "0.7.7"
bollard = "0.17.1"
bytes = "1.8.0"
chrono = "0.4.38"
clap = { version = "4.4.7", features = ["derive"] }
config = "0.14.1"
derive_more = { version = "1.0.0", features = ["display", "from_str", "debug"] }
dirs = "5.0.1"
dirs-next = "2.0.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
extism = "1.8.0"
flume = "0.11.0"
futures = "0.3.31"
futures-buffered = "0.2.9"
futures-lite = "2.5.0"
headers = { version = "0.4" }
hex = { version = "0.4.3", features = ["serde"] }
hyper = "1"
hyper-util = "0.1.3"
indicatif = "0.17.7"
iroh = "0.28"
iroh-metrics = "0.27.0"
iroh-quinn = "0.12.0"
jsonschema = { version = "0.26.1", default-features = false }
lru = "0.12.1"
mime = "0.3.17"
mime_classifier = "0.0.1"
mime_guess = "2.0.4"
num_cpus = "1.16.0"
rand = "0.8.5"
range-collections = "0.4.5"
rusqlite = { version = "0.32.1", features = ["uuid"] }
rustls = "0.21"
rustls-pemfile = "1.0.2"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
tempfile = "3.13.0"
time = { version = "0.3.34", features = ["serde-human-readable"] }
tinytemplate = "1.2.1"
tokio = { version = "1.41.0", features = ["full"] }
tokio-rustls-acme = { version = "0.2.0", features = ["axum"] }
toml = "0.8.19"
tower-http = { version = "0.5.0", features = ["cors"] }
tower-service = "0.3.2"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.4.1"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
version-compare = "0.2.0"
walkdir = "2.5.0"
wasi-common = "19.0.1"
wasmtime = "19.0.1"
wasmtime-wasi = "19.0.1"

